v1.1.0/modules/schema/pages/class/PFVArType1IEEEPFController.adoc
= `PFVArType1IEEEPFController`
:toclevels: 4


+++IEEE PF controller type 1 which operates by moving the voltage reference directly.
Reference: IEEE 421.5-2005, 11.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PFVArType1IEEEPFController`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
**** *`PFVArType1IEEEPFController`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ovex,`ovex`>>
//| [[slots_table.ovex]]<<ovex,`ovex`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Overexcitation Flag (<i>OVEX</i>)
true = overexcited
false = underexcited.+++
| _n/a_

| <<tpfc,`tpfc`>>
//| [[slots_table.tpfc]]<<tpfc,`tpfc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++PF controller time delay (<i>T</i><i><sub>PFC</sub></i>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<vitmin,`vitmin`>>
//| [[slots_table.vitmin]]<<vitmin,`vitmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum machine terminal current needed to enable pf/var controller (<i>V</i><i><sub>ITMIN</sub></i>).+++
| _n/a_

| <<vpf,`vpf`>>
//| [[slots_table.vpf]]<<vpf,`vpf`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Synchronous machine power factor (<i>V</i><i><sub>PF</sub></i>).+++
| _n/a_

| <<vpfcbw,`vpfcbw`>>
//| [[slots_table.vpfcbw]]<<vpfcbw,`vpfcbw`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++PF controller deadband (<i>V</i><i><sub>PFC_BW</sub></i>).  Typical value = 0,05.+++
| _n/a_

| <<vpfref,`vpfref`>>
//| [[slots_table.vpfref]]<<vpfref,`vpfref`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PF controller reference (<i>V</i><i><sub>PFREF</sub></i>).+++
| _n/a_

| <<vvtmax,`vvtmax`>>
//| [[slots_table.vvtmax]]<<vvtmax,`vvtmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum machine terminal voltage needed for pf/var controller to be enabled (<i>V</i><i><sub>VTMAX</sub></i>) (&gt;...+++
| _n/a_

| <<vvtmin,`vvtmin`>>
//| [[slots_table.vvtmin]]<<vvtmin,`vvtmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum machine terminal voltage needed to enable pf/var controller (<i>V</i><i><sub>VTMIN</sub></i>) (&lt;...+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power actor or VAr controller type 1 model is associated.+++
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1 +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power factor or VAr controller type 1 model.+++
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| <<VoltageAdjusterDynamics,`VoltageAdjusterDynamics`>>
//| [[slots_table.VoltageAdjusterDynamics]]<<VoltageAdjusterDynamics,`VoltageAdjusterDynamics`>>
| 0..1 +
xref::class/VoltageAdjusterDynamics.adoc[`VoltageAdjusterDynamics`]
| +++Voltage adjuster model associated with this power factor or VAr controller type 1 model.+++
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power actor or VAr controller type 1 model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArControllerType1Dynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ovex]
=== `ovex`
+++Overexcitation Flag (<i>OVEX</i>)
true = overexcited
false = underexcited.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.ovex`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.ovex,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power factor or VAr controller type 1 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArControllerType1Dynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tpfc]
=== `tpfc`
+++PF controller time delay (<i>T</i><i><sub>PFC</sub></i>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.tpfc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpfc,&#10548;>>
--
////


//[discrete]
[#vitmin]
=== `vitmin`
+++Minimum machine terminal current needed to enable pf/var controller (<i>V</i><i><sub>ITMIN</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vitmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vitmin,&#10548;>>
--
////


//[discrete]
[#VoltageAdjusterDynamics]
=== `VoltageAdjusterDynamics`
+++Voltage adjuster model associated with this power factor or VAr controller type 1 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArControllerType1Dynamics.VoltageAdjusterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/VoltageAdjusterDynamics.adoc[`VoltageAdjusterDynamics`]

| Inherited from
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageAdjusterDynamics,&#10548;>>
--
////


//[discrete]
[#vpf]
=== `vpf`
+++Synchronous machine power factor (<i>V</i><i><sub>PF</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vpf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vpf,&#10548;>>
--
////


//[discrete]
[#vpfcbw]
=== `vpfcbw`
+++PF controller deadband (<i>V</i><i><sub>PFC_BW</sub></i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vpfcbw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.vpfcbw,&#10548;>>
--
////


//[discrete]
[#vpfref]
=== `vpfref`
+++PF controller reference (<i>V</i><i><sub>PFREF</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vpfref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vpfref,&#10548;>>
--
////


//[discrete]
[#vvtmax]
=== `vvtmax`
+++Maximum machine terminal voltage needed for pf/var controller to be enabled (<i>V</i><i><sub>VTMAX</sub></i>) (&gt; PFVArType1IEEEPFController.vvtmin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vvtmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vvtmax,&#10548;>>
--
////


//[discrete]
[#vvtmin]
=== `vvtmin`
+++Minimum machine terminal voltage needed to enable pf/var controller (<i>V</i><i><sub>VTMIN</sub></i>) (&lt; PFVArType1IEEEPFController.vvtmax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PFVArType1IEEEPFController.vvtmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vvtmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
